--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,25 @@
 # Core web framework
 fastapi==0.121.1
-uvicorn==0.38.0
+uvicorn[standard]==0.38.0
 python-dotenv==1.2.1
+python-multipart==0.0.16
 
-# LangChain essentials (minimal for faster builds)
-langchain==1.0.5
+# LangChain core (minimal installation)
 langchain-core==1.0.4
-langchain-community==0.4.1
-langchain-huggingface==1.0.1
 langchain-groq==1.0.0
 langchain-text-splitters==1.0.0
+langchain-community==0.4.1
+langchain-huggingface==1.0.1
 
-# Vector store (CPU version for free tier)
+# Vector store (CPU only)
 faiss-cpu==1.12.0
 
-# Embeddings (optimized versions)
+# Lightweight embeddings
 sentence-transformers==5.1.2
 huggingface-hub==0.36.0
 
-# PDF processing
+# Document processing
 pypdf==6.2.0
 
-# Performance optimizations
+# Performance
 orjson==3.11.4
