Production ready: Update CORS and API URLs with actual Render deployment URLs

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production API URL for Render
-VITE_API_URL=https://rag-chat-backend.onrender.com
+VITE_API_URL=https://rag-chat-backend-730g.onrender.com
