[VERCEL-FORCE-REBUILD] Cache bust 2025-11-23-19-22 - MUST use production API URL

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,12 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm ci && npm run build",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
+  "installCommand": "npm ci",
   "framework": "vite",
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "FORCE_REBUILD": "2025-11-23-19-22"
   },
   "rewrites": [
     {
