Fix Netlify build: remove tsc requirement, add VITE_API_URL env var

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   NODE_ENV = "production"
+  VITE_API_URL = "https://rag-chat-backend-730g.onrender.com"
 
 [[redirects]]
   from = "/*"
