--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,6 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
+    "vite": "^6.0.1"
   }
 }
