Force clean build in GitHub Actions - remove dist before build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Build
         run: |
           cd frontend
+          rm -rf dist
           npm run build
           
       - name: Setup Pages
