--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,11 @@ langchain-text-splitters==1.0.0
 langchain-community==0.4.1
 langchain-huggingface==1.0.1
 
+# HuggingFace transformers for local LLM (FREE - optional for local dev)
+transformers>=4.36.0
+torch>=2.0.0
+accelerate>=0.25.0
+
 # Vector store (CPU only)
 faiss-cpu==1.12.0
 
